Netlify: copy attached_assets before build so images are included

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "license": "MIT",
   "scripts": {
     "dev": "PORT=5009 NODE_ENV=development tsx server/index.ts",
+    "prebuild": "cp -R attached_assets client/public/attached_assets || true",
     "build": "tsx script/build.ts",
     "start": "NODE_ENV=production node dist/index.cjs",
     "check": "tsc",
