--- a/netlify.toml
+++ b/netlify.toml
@@ -1,5 +1,5 @@
 [build]
-  command = "npm run build"
+  command = "npm run prebuild && npm run build"
   publish = "dist/public"
 
 # Optional: if you want to proxy `/api/*` to a backend, uncomment and set `to`.
