Add Autoscout links and fix build for Windows

--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "type": "module",
   "license": "MIT",
   "scripts": {
-    "dev": "PORT=5009 NODE_ENV=development tsx server/index.ts",
-    "prebuild": "cp -R attached_assets client/public/attached_assets || true",
+    "dev": "cross-env PORT=5009 NODE_ENV=development tsx server/index.ts",
+    "prebuild": "node -e \"const fs=require('fs'); const path=require('path'); const src='attached_assets'; const dest=path.join('client','public','attached_assets'); fs.cpSync(src,dest,{recursive:true,force:true});\"",
     "build": "tsx script/build.ts",
-    "start": "NODE_ENV=production node dist/index.cjs",
+    "start": "cross-env NODE_ENV=production node dist/index.cjs",
     "check": "tsc",
     "db:push": "drizzle-kit push"
   },
@@ -77,7 +77,6 @@
     "zod-validation-error": "^3.4.0"
   },
   "devDependencies": {
-    
     "@tailwindcss/typography": "^0.5.15",
     "@tailwindcss/vite": "^4.1.18",
     "@types/connect-pg-simple": "^7.0.3",
@@ -91,6 +90,8 @@
     "@types/ws": "^8.5.13",
     "@vitejs/plugin-react": "^4.7.0",
     "autoprefixer": "^10.4.20",
+    "concurrently": "^9.2.1",
+    "cross-env": "^10.1.0",
     "drizzle-kit": "^0.31.8",
     "esbuild": "^0.25.0",
     "postcss": "^8.4.47",
